# is-vector-search

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  hermes.py  lifespan.py  main.py  models.py
app/routers/: document_extraction.py  document_extraction_pg.py  file_search.py  pdf.py  search.py  vector_search.py
app/utils/: db.py  file_manager.py  rag_utils.py  supabase_client.py  supabase_db.py
notebooks/: test_pgvector_search.ipynb
scripts/: init-pgvector.sql  migrate_chroma_to_postgres.py  migrate_supabase_metadata_to_postgres.py  run_migration.py  test_pgvector.py
